added info and syn sem of l-cal

--- a/plos_header.tex
+++ b/plos_header.tex
@@ -70,6 +70,9 @@
 \usepackage{verbatim}
 % personal package
 \usepackage{crs}
+%semantics
+\usepackage{latexsym}
+\usepackage{stmaryrd}
 %% ** EDIT HERE **
 %% PLEASE INCLUDE ALL MACROS BELOW
 
