--- a/plos_template.tex
+++ b/plos_template.tex
@@ -28,12 +28,14 @@
 \input{tex/funcloseinvar.tex}
 
 \section*{Discussion}
+\input{tex/discussion.tex}
+
 
 % You may title this section "Methods" or "Models". 
 % "Models" is not a valid title for PLoS ONE authors. However, PLoS ONE
 % authors may use "Analysis" 
 \section*{Materials and Methods}
-\subsection*{Categories\todo{so far, this section is lifted from planetmath.org.}}
+\subsection*{Categories\todo{so far, this section is lifted from planetmath.org, but it is standard stuff.}}
 \input{tex/intuition.tex}
 \input{tex/category.tex}
 %
@@ -46,6 +48,7 @@
 \subsection*{Symmetric monoidal categories}
 \input{tex/symmetricmonoidalcategory.tex}
 
+\input{tex/lambdaccc.tex}
 % Do NOT remove this, even if you are not including acknowledgments
 \section*{Acknowledgments}
 
