--- a/tex/titleinfo.tex
+++ b/tex/titleinfo.tex
@@ -1,6 +1,6 @@
 \begin{flushleft}
 {\Large
-\textbf{Title}
+\textbf{A minimal language for functional closure and the origin of evolvability}
 }
 % Insert Author names, affiliations and corresponding author email.
 \\
