added some refs

--- a/tex/introduction.tex
+++ b/tex/introduction.tex
@@ -1,11 +1,11 @@
-The capacities have been demonstrated to chemically synthesize and transplant genomes to alter organismal identity \todo{insert reference to Smith/Venter work on M. genitalium} and to execute simulations of the life cycle of a single-celled organism \todo{insert reference to Karr/Covert whole-cell model} by collecting measurements of a large number of parameter values conveying detailed information about its underlying processes and integrating them into presumably analogous coupled algorithmic processes. These capacities and the technologies that may result from them add to the mounting pressure underlying the very existence of the field of systems biology to ask, in an effort to synthesize knowledge from an enormous number of empirical investigations, whether or not we can abstract properties that are necessary, and perhaps sufficient, for determining a process capable of generating organisms \emph{de novo}. Answering questions like this one are crucial for clarifying hypotheses germane to understanding what is required in order to explain the origin and distinguishing characteristics of life and thus the origin and nature of evolutionary processes.
+The capacities have been demonstrated to chemically synthesize and transplant genomes to alter organismal identity \cite{Gibson2010} and to execute simulations of the life cycle of a single-celled organism \cite{Karr2012} by collecting measurements of a large number of parameter values conveying detailed information about its underlying processes and integrating them into presumably analogous coupled algorithmic processes. These capacities and the technologies that may result from them add to the mounting pressure underlying the very existence of the field of systems biology to ask, in an effort to synthesize knowledge from an enormous number of empirical investigations, whether or not we can abstract properties that are necessary, and perhaps sufficient, for determining a process capable of generating organisms \emph{de novo}. Answering questions like this one are crucial for clarifying hypotheses germane to understanding what is required in order to explain the origin and distinguishing characteristics of life and thus the origin and nature of evolutionary processes.
 
 Very few biologists or other scientists dispute that evolution is the most fundamental organizing concept in biology. In this light, it seems somewhat surprising that not even more effort than has already been exerted is invested in clarifying and formalizing increasingly detailed conceptions of its origins and operation. In order to understand biological systems, it will be necessary to address the question: What are the necessary enabling conditions that make biological evolution possible? The synthesis of some potential answers to this question may clarify a path toward defining a sufficient collection of preconditions for evolutionary processes to take flight.
 
-Here we argue that one such necessary precondition for evolutionary processes, which has been identified before as a ``defining characteristic of life''\todo{cite Rosen's original work}, is what we refer to as \emph{functional closure}. In order to define this term and its context, we begin with a diagrammatic model of a prototypical biochemical reaction network that has been claimed to possess this property. We then ask: Is there a formal language capable of expressing this property? A brief detour is necessary to motivate this question. In computer science, there is a property of languages called \emph{expressive power} that is used both heuristically and formally to rank order models of computation, programming languages, and their associated logics with respect to one another and with respect to so-called \emph{natural language}. Roughly speaking, an increased level of expressive power of a language correlates with its ability to express more complex or sophisticated ideas. One might ask why it is not always desirable to work within the extant language containing the highest possible expressive power. One reason to consider less expressive languages at all is that important questions about them can be answered algorithmically with appropriate computer hardware and software in a practical amount of time and memory, whereas the same questions posed of languages with more expressive power are known not to be able to be answered by such means\todo{cite a review and/or text containing relevant results in computational complexity and computability theory}. Thus, identifying a \emph{minimal} language capable of expressing the necessary conditions for the origin of evolutionary processes is directly germane to the continuing development of exquisitely detailed models of whole cells as they are refined, unfold and are embedded into equally detailed multi-level models of populations, communities, and ecosystems.
+Here we argue that one such necessary precondition for evolutionary processes, which has been identified before as a ``defining characteristic of life''\cite{Rosen1972,Rosen1978,Rosen1985,Rosen1991}, is what we refer to as \emph{functional closure}. In order to define this term and its context, we begin with a diagrammatic model of a prototypical biochemical reaction network that has been claimed to possess this property. We then ask: Is there a formal language capable of expressing this property? A brief detour is necessary to motivate this question. In computer science, there is a property of languages called \emph{expressive power} that is used both heuristically and formally to rank order models of computation, programming languages, and their associated logics with respect to one another and with respect to so-called \emph{natural language}. Roughly speaking, an increased level of expressive power of a language correlates with its ability to express more complex or sophisticated ideas. One might ask why it is not always desirable to work within the extant language containing the highest possible expressive power. One reason to consider less expressive languages at all is that important questions about them can be answered algorithmically with appropriate computer hardware and software in a practical amount of time and memory, whereas the same questions posed of languages with more expressive power are known not to be able to be answered by such means\todo{cite a review and/or text containing relevant results in computational complexity and computability theory}. Thus, identifying a \emph{minimal} language capable of expressing the necessary conditions for the origin of evolutionary processes is directly germane to the continuing development of exquisitely detailed models of whole cells as they are refined, unfold and are embedded into equally detailed multi-level models of populations, communities, and ecosystems.
 
-In this light, we can refine the question, "Is there a formal language capable of expressing the functional closure property?" by adjoining the follow-up question, "If so, among those that are, which is the language of minimal expressive power?" We begin to address the first question taking an historically motivated approach \todo{cite Rosen's original work and perhaps Letelier et al, 2006} by attempting to interpret the aforementioned diagram expressing functional closure in terms of an abstract algebraic language (category theory). Unfortunately, the prototypical diagram violates a fundamental assumption of this language precisely because the diagram expresses the functional closure property. This diagram, and indeed the functional closure property in general, can be interpreted in terms of a standard model of computation called (untyped or type-free) lambda calculus. Via this conceptual route, we find that the interpretation of functional closure in terms of category theory can be recovered, albeit it in a form that looks quite different, via one typical category theoretic semantics for the untyped lambda calculus.
+In this light, we can refine the question, "Is there a formal language capable of expressing the functional closure property?" by adjoining the follow-up question, "If so, among those that are, which is the language of minimal expressive power?" We begin to address the first question taking an historically motivated approach \cite{Rosen1972,Letelier2006} by attempting to interpret the aforementioned diagram expressing functional closure in terms of an abstract algebraic language (category theory). Unfortunately, the prototypical diagram violates a fundamental assumption of this language precisely because the diagram expresses the functional closure property. This diagram, and indeed the functional closure property in general, can be interpreted in terms of a standard model of computation called (untyped or type-free) lambda calculus \cite{Mossio2009}. Via this conceptual route, we find that the interpretation of functional closure in terms of category theory can be recovered, albeit it in a form that looks quite different, via one typical category theoretic semantics for the untyped lambda calculus \cite{Scott1980,Barendregt1985,Abramsky1995}.
 
 Although the untyped lambda calculus and its associated category theoretic semantics are capable of expressing the functional closure property, this method has at least two problems. One is that the untyped lambda calculus is a relatively highly expressive language capable of implementing general recursion. The second is that the untyped lambda calculus is capable of expressing functional closure in a trivial way via something as simple as an identity function. A simple solution might seem to pass to the simply typed lambda calculus, of which the untyped lambda calculus has been argued to be a special case. However, as a result of the analogous category theoretic semantics for the simply typed lambda calculus, doing so brings us back to the original category theoretic interpretation of the diagram expressing the functional closure property that we demonstrated to be in type-theoretic error.
 
-This circularity seems to suggest that in order to address the second question regarding minimal expressive power necessary to express functional closure it may be necessary to take into account expressions of functional closure that may be possible to construct in various extensions of the simply typed lambda calculus (some of these may be found on the seven additional vertices of Barendregt's lambda cube\todo{if this is not removed, cite Barendregt's lambda calculus text}). We discuss these issues with respect to the goal of identifying a language of minimal expressive power capable of representing the functional closure property or, what may be relevant in light of the fact that the functional closure property in its present formulation may be too strong and require weakening of some form, approximations thereof.
+This circularity seems to suggest that in order to address the second question regarding minimal expressive power necessary to express functional closure it may be necessary to take into account expressions of functional closure that may be possible to construct in various extensions of the simply typed lambda calculus (some of these may be found on the seven additional vertices of Barendregt's lambda cube \cite{Barendregt1985}). We discuss these issues with respect to the goal of identifying a language of minimal expressive power capable of representing the functional closure property or, what may be relevant in light of the fact that the functional closure property in its present formulation may be too strong and require weakening of some form, approximations thereof.
